--- a/client/src/app/components/reportes/reportes-alumno-maestro/reportes-alumno-maestro.component.html
+++ b/client/src/app/components/reportes/reportes-alumno-maestro/reportes-alumno-maestro.component.html
@@ -52,7 +52,8 @@
               </li>
               <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
               <li><a routerLink="/grabaciones">Grabaciones</a></li>
-              <li><a routerLink="">Materiales</a></li>
+              <li><a routerLink="/materiales">Materiales</a></li>
+              <li><a routerLink="/reportes">Reportes</a></li>
             </ul>
           </div>
         </nav>
