--- a/client/src/app/components/reportes/reportes-horas-maestros/reportes-horas-maestros.component.html
+++ b/client/src/app/components/reportes/reportes-horas-maestros/reportes-horas-maestros.component.html
@@ -37,7 +37,7 @@
               <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
               <li><a routerLink="/grabaciones">Grabaciones</a></li>
               <li><a routerLink="/materiales">Materiales</a></li>
-              <li *ngIf="isAdmin" class="has-dropdown"><a href="/reportes/alumnoMto">Reportes</a>
+              <li *ngIf="isAdmin" class="has-dropdown"><a href="/reportes">Reportes</a>
                
               </li>
             </ul>
