--- a/client/src/app/components/calificaciones-form/calificaciones-form.component.html
+++ b/client/src/app/components/calificaciones-form/calificaciones-form.component.html
@@ -10,26 +10,36 @@
     <header>
       <nav>
         <div class="nav-wrapper" style="background-color: #0066ff">
-          <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
+          <a routerLink="/" class="brand-logo"
+            ><img
+              src="https://i.imgur.com/1NA0X3h.jpg"
+              alt="logo"
+              style="width: px; height: 62px; margin-left: 5px"
+          /></a>
   
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
-            <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
-              <li><a (click)="logout()">Cerrar Sesion</a></li>
-            </ul>
-          </li>
+            <li class="has-dropdown">
+              <a style="margin-right: 25px">{{ nombreUsuario }}</a>
+              <ul class="dropdown">
+                <li><a (click)="logout()">Cerrar Sesion</a></li>
+                <li><a [routerLink]="['/usuario/update',id]">Actualizar datos</a></li>
+                
+              </ul>
+            </li>
             <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
             <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
-            <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-
-            </li>
-            
+            <li *ngIf="isAdmin" class="has-dropdown">
+              <a routerLink="/alumnos-list">Alumnos</a>
+           
+  
             <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
             <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
             <li><a routerLink="/clases">Clases</a></li>
-            <li class="has-dropdown"><a>Horarios</a>
+            <li *ngIf="isAdmin||isMaestro" class="has-dropdown">
+              <a>Horarios</a>
               <ul class="dropdown">
                 <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
                 <li><a routerLink="/horarios">Ver Horarios</a></li>
@@ -37,7 +47,8 @@
             </li>
             <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
             <li><a routerLink="/grabaciones">Grabaciones</a></li>
-            <li><a routerLink="">Materiales</a></li>
+            <li><a routerLink="/materiales">Materiales</a></li>
+            <li><a routerLink="/reportes">Reportes</a></li>
           </ul>
         </div>
       </nav>
