Botón de borrado de archivos implementado

--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -27,32 +27,30 @@
           </div>
           <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
             <h2 class="text-3xl text-gray-800 font-bold">
-              <span class="text-indigo-600"
-                ></span
-              >
+              <span class="text-indigo-600"></span>
             </h2>
             <h2 class="text-3xl text-gray-800 font-bold">
-              <span class="text-indigo-600"
-                >{{ file }}</span
-              >
+              <span class="text-indigo-600">{{ file }}</span>
             </h2>
-          
-         
-            <a class="mt-4 text-gray-600" [href]="getFileUrl(file)" target="_blank">Haz click para ver el archivo</a>
-            <br>
-           
-            <br>
-            <br>
 
-         
-            <button
-            data-ripple-light="true"
-           
-            data-popover-target="popover"
-            class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-            
+            <a
+              class="mt-4 text-gray-600"
+              [href]="getFileUrl(file)"
+              target="_blank"
+              >Haz click para ver el archivo</a
             >
-            Borrar archivo
+            <br />
+
+            <br />
+            <br />
+
+            <button
+              (click)="deleteFile(file)"
+              data-ripple-light="true"
+              data-popover-target="popover"
+              class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+            >
+              Borrar
             </button>
           </div>
         </div>
@@ -64,21 +62,26 @@
 
     <h6 *ngIf="click">Lista de Materiales</h6>
 
-    <div class="file-upload" style="margin-left: 30px;">
-      <input #singleInput type="file" name="file"  (change)="selectFile($event)"/>
-      
+    <div class="file-upload" style="margin-left: 30px">
+      <input
+        #singleInput
+        type="file"
+        name="file"
+        (change)="selectFile($event)"
+      />
 
       <p id="file-name"></p>
     </div>
-    <br>
-    
-     <button data-ripple-light="true" data-popover-target="popover"
-     style="margin-left: 30px;"
-     (click)="onSubmitFile()"
-     class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
-     Subir
-   </button>
+    <br />
 
- 
+    <button
+      data-ripple-light="true"
+      data-popover-target="popover"
+      style="margin-left: 30px"
+      (click)="onSubmitFile()"
+      class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+    >
+      Subir
+    </button>
   </body>
 </html>
