--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -66,8 +66,9 @@
       <input
         #singleInput
         type="file"
-        name="file"
-        (change)="selectFile($event)"
+        name="files"
+        (change)="selectFiles($event)"
+        multiple
       />
 
       <p id="file-name"></p>
@@ -78,10 +79,18 @@
       data-ripple-light="true"
       data-popover-target="popover"
       style="margin-left: 30px"
-      (click)="onSubmitFile()"
+      (click)="onSubmitFiles()"
       class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
     >
       Subir
     </button>
+    <button
+      (click)="downloadAllFiles()"
+      style="margin-left: 30px"
+      class="middle none center rounded-lg bg-gradient-to-tr from-green-600 to-green-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+    >
+      Descargar Todos
+    </button>
   </body>
+  <br />
 </html>
