--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -84,11 +84,18 @@
       Subir
     </button>
     <button
+      [disabled]="arrayFiles.length === 0"
       (click)="downloadAllFiles()"
       style="margin-left: 30px"
       class="middle none center rounded-lg bg-gradient-to-tr from-green-600 to-green-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
     >
       Descargar Todos
+    </button>
+    <button
+      style="margin-left: 30px"
+      class="middle none center rounded-lg bg-gradient-to-tr from-yellow-600 to-yellow-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+    >
+      Etiquetas
     </button>
   </body>
   <br />
