--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -79,9 +79,10 @@
       data-popover-target="popover"
       style="margin-left: 30px"
       (click)="onSubmitFiles()"
+      [disabled]="!filesSelected"
       class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
     >
-      Subir
+      Subir archivos
     </button>
     <button
       [disabled]="arrayFiles.length === 0"
@@ -89,7 +90,7 @@
       style="margin-left: 30px"
       class="middle none center rounded-lg bg-gradient-to-tr from-green-600 to-green-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
     >
-      Descargar Todos
+      Descargar todos los archivos
     </button>
     <button
       style="margin-left: 30px"
