--- a/client/src/app/components/tag-manager/tag-manager.component.html
+++ b/client/src/app/components/tag-manager/tag-manager.component.html
@@ -1,15 +1,90 @@
 <div
   class="bg-white overflow-hidden shadow rounded-lg divide-y divide-gray-200"
 >
-  <div class="px-4 py-5 sm:px-6">
-    <!-- Content goes here -->
-    <!-- We use less vertical padding on card headers on desktop than on body sections -->
+  <div>
+    <div class="sm:hidden">
+      <label for="tabs" class="sr-only">Select a tab</label>
+      <!-- Use an "onChange" listener to redirect the user to the selected tab URL. -->
+      <select
+        id="tabs"
+        name="tabs"
+        class="block w-full focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md"
+      >
+        <option selected>My Account</option>
+
+        <option>Company</option>
+
+        <option>Team Members</option>
+
+        <option>Billing</option>
+      </select>
+    </div>
+    <div class="hidden sm:block">
+      <nav
+        class="relative z-0 rounded-lg shadow flex divide-x divide-gray-200"
+        aria-label="Tabs"
+      >
+        <!-- Current: "text-gray-900", Default: "text-gray-500 hover:text-gray-700" -->
+        <a
+          class="text-gray-900 rounded-l-lg group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
+          aria-current="page"
+        >
+          <span>My Account</span>
+          <span
+            aria-hidden="true"
+            class="bg-indigo-500 absolute inset-x-0 bottom-0 h-0.5"
+          ></span>
+        </a>
+
+        <a
+          class="text-gray-500 hover:text-gray-700 group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
+        >
+          <span>Company</span>
+          <span
+            aria-hidden="true"
+            class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
+          ></span>
+        </a>
+
+        <a
+          class="text-gray-500 hover:text-gray-700 group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
+        >
+          <span>Team Members</span>
+          <span
+            aria-hidden="true"
+            class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
+          ></span>
+        </a>
+
+        <a
+          class="text-gray-500 hover:text-gray-700 rounded-r-lg group relative min-w-0 flex-1 overflow-hidden bg-white py-4 px-4 text-sm font-medium text-center hover:bg-gray-50 focus:z-10"
+        >
+          <span>Billing</span>
+          <span
+            aria-hidden="true"
+            class="bg-transparent absolute inset-x-0 bottom-0 h-0.5"
+          ></span>
+        </a>
+      </nav>
+    </div>
   </div>
   <div class="px-4 py-5 sm:p-6">
     <!-- Content goes here -->
   </div>
   <div class="px-4 py-4 sm:px-6">
-    <!-- Content goes here -->
-    <!-- We use less vertical padding on card footers at all sizes than on headers or body sections -->
+    <button
+      (click)="closeTagManager()"
+      type="button"
+      class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+    >
+      Cerrar
+    </button>
+    <button
+      type="button"
+      style="margin-left: 30px"
+      class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+    >
+      Guardar cambios
+    </button>
   </div>
 </div>
